# SLU_pipeline

./: .gitignore  README.md  load.py  main.py  pyproject.toml  teet.py
asr_module/: asr.py
nlu_module/: nlu.py
nlu_module/config/: llm_setting.json
nlu_module/data/ATIS/: intent_list.json  slot_list.json
nlu_module/data/SLURP/: intent_list.json  slot_list.json  test.json  test2.json  train.json  valid.json
nlu_module/data/SNIPS/: intent_list.json  slot_list.json  test2.json
nlu_module/model/: gemini_use.py  gpt_use.py  ollama_use.py  providers.py
nlu_module/src/: bio_seq.py  data_util.py  gpt_slu.py  gpt_slu1.py  metrics.py  slot_norm.py
